[tool.poetry]
name = "SerpentAI-Image"
version = "0.1.1"
description = "Image class for Serpent.AI projects"
readme = "README.md"
authors = ["Nicholas Brochu <nicholas@serpent.ai>"]
license = "MIT"
homepage = "https://serpent.ai"
repository = "https://github.com/SerpentAI/SerpentAI-Image"
keywords = ["Image Processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics"
]
packages = [
    {include = "serpent_image"},
]
include = []

[tool.poetry.dependencies]
python = ">=3.8"

numpy = "~1.18"
pillow = "~7.1"
scikit-image = "~0.17.1"
scikit-learn = "~0.22"

[tool.poetry.dev-dependencies]
ipython = "~7.14"
notebook = "~6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"